Removed duplicate \bibliographystyle

--- a/source/latex/biorxiv_article.tex
+++ b/source/latex/biorxiv_article.tex
@@ -39,7 +39,7 @@ The authors would like to thank Maximilian Stammnitz for testing the software, a
 \endgroup
 
 \section*{References}
-\bibliographystyle{zHenriquesLab-StyleBib} % Style BST file
+%\bibliographystyle{zHenriquesLab-StyleBib} % Style BST file
 \bibliography{references.bib}
 
 \input{manuscript/figures}
